<resources>
    <string name="app_name">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="bearing">Bearing</string>
    <string name="lat_long_result">%1$.7f</string>
    <string name="altitude_result">%1$.0f m (%2$.0f ft)</string>
    <string name="bearing_result">%1$.0f ° %2$s</string>
    <string name="last_location_warning">Using last known location</string>
    <string name="live_update">Live update at: </string>
    <string name="action_settings">Settings</string>
    <string name="not_available">Not available</string>d

    <string name="detected_activities_title">Detected Activities</string>
    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="activity_detection_label">Activity Detection</string>
</resources>
