<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ereinecke.location.location.MainActivity">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:paddingEnd="8dp"
                android:text="@string/latitude"
                android:textSize="@dimen/label_size" />

            <TextView
                android:id="@+id/latView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/result_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/longLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/longitude"
                android:textSize="@dimen/label_size" />

            <TextView
                android:id="@+id/longView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="false"
                android:text="@string/longitude"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/result_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/altitudeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/altitude"
                android:textSize="@dimen/label_size" />

            <TextView
                android:id="@+id/altitudeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/longView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="false"
                android:text="@string/altitude"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/result_size" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statusView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/altitudeView"
                android:layout_alignParentStart="true"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:textSize="@dimen/label_size" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/request_activity_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_layout"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="16dp"
        android:onClick="requestActivityUpdatesButtonHandler"
        android:paddingLeft="@dimen/abc_button_padding_horizontal_material"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingRight="@dimen/abc_button_padding_horizontal_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:text="@string/request_activity_updates" />

    <Button
        android:id="@+id/remove_activity_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_layout"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/request_activity_updates_button"
        android:onClick="removeActivityUpdatesButtonHandler"
        android:text="@string/remove_activity_updates" />

    <TextView
        android:id="@+id/detectedActivities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="18"
        android:layout_below="@+id/request_activity_updates_button"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/detected_activities_title" />

</RelativeLayout>
